[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threat-designer-cli"
version = "0.9.2"
description = "Threat Designer CLI — local STRIDE threat modeling from architecture diagrams"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Edvin Hallvaxhiu", email = "ehallvax@amazon.com"},
]
keywords = ["threat-modeling", "stride", "security", "langchain", "bedrock", "openai", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development",
]
dependencies = [
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "InquirerPy>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "boto3>=1.35",
    "langchain-aws>=0.2",
    "langchain>=1.0",
    "langchain-core>=0.3",
    "langgraph>=0.4",
    "langchain-task-steering>=0.1.2,<0.2",
    "python-docx>=1.1",
    "reportlab>=4.0",
    "langchain-openai>=0.2",
    "structlog>=24.0",
]

[project.urls]
Homepage = "https://github.com/awslabs/threat-designer"
Repository = "https://github.com/awslabs/threat-designer"
Issues = "https://github.com/awslabs/threat-designer/issues"

[project.scripts]
threat-designer = "threat_designer_cli.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["threat_designer_cli*"]
